changes of content

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <ul class="many-text container">
           <li>Собачка Звонимира:</li>
           <li>Максимальная длина тела до 7 см, обычно меньше.</li>
-          <li>Для аквариумов от 20л.</li>
+          <li>Для аквариумов от 30л.</li>
           <li>Содержать группой из самца и самок или по одиночке.</li>
           <li>Питается в основном заморозкой (см. ниже "Кормление").</li>
         </ul>
@@ -423,7 +423,7 @@
           <li>Краб Brachynotus sexdentatus:</li>
           <li>Максимальная длина панциря до 1.8см, обычно до 1см</li>
           <li>Для аквариумов от 20л.</li>
-          <li>Содержать группой или по одиночке.</li>
+          <li>1 краб на 1 аквариум.</li>
           <li>
             Питается в основном заморозкой (см. ниже "Кормление"), подбирает
             остатки пищи в аквариуме, чистильщик.
@@ -501,6 +501,20 @@
         </ul>
       </section>
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+      <section class="card card--acclimatization">
+        <div class="accent-header">
+          <h2 class="card__title">Перевод на океаническую соленость</h2>
+        </div>
+        <ul class="many-text many-text--long-p-bottom container">
+          <li>
+            Черноморских животных безопаснее транспортировать в черноморской воде (около 19 промилле).
+          </li>
+          <li>Переводить на океаническую соленость нужно в течение часа капельным путем или доливом воды из аквариума малыми порциями, пока соленость не дойдет до океанической (35 промилле).</li>
+          <li>
+            Животные первые дни после перевода испытывают сильный стресс, креветки и рыбки в это время часто выпрыгивают из аквариума, аквариум обязательно должен быть накрыт покровным стеклом или сеткой, особенно углы.
+          </li>
+        </ul>
+      </section>
       <section class="card card--feeding">
         <div class="accent-header">
           <h2 class="card__title">Кормление</h2>
