--- a/index.html
+++ b/index.html
@@ -503,9 +503,13 @@
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
       <section class="card card--acclimatization">
         <div class="accent-header">
-          <h2 class="card__title">Перевод на океаническую соленость</h2>
+          <h2 class="card__title">Акклиматизация
+          </h2>
         </div>
         <ul class="many-text many-text--long-p-bottom container">
+          <li>
+            Перевод на океаническую соленость:
+          </li>
           <li>
             Черноморских животных безопаснее транспортировать в черноморской воде (около 19 промилле).
           </li>
